--- a/MLH-Braintree/ShopListTableViewCell.xib
+++ b/MLH-Braintree/ShopListTableViewCell.xib
@@ -18,13 +18,13 @@
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" horizontalCompressionResistancePriority="748" misplaced="YES" text="Item" lineBreakMode="tailTruncation" minimumFontSize="12" translatesAutoresizingMaskIntoConstraints="NO" id="iZs-SP-7Xl">
                         <rect key="frame" x="96" y="24" width="157" height="37"/>
                         <fontDescription key="fontDescription" name="Avenir-Light" family="Avenir" pointSize="27"/>
-                        <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="$34" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TtK-Lc-qs2">
                         <rect key="frame" x="263" y="25" width="39" height="35"/>
                         <fontDescription key="fontDescription" name="Avenir-Light" family="Avenir" pointSize="20"/>
-                        <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="textColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="List" translatesAutoresizingMaskIntoConstraints="NO" id="Wby-bv-Wva">
@@ -44,7 +44,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
-                        <color key="backgroundColor" red="0.097018066338345699" green="0.87456333637237549" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="backgroundColor" red="0.42355261282429391" green="0.88763747733048715" blue="0.71900907453852703" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="Zx0-iA-Uzf" secondAttribute="trailing" constant="5" id="CTL-Xy-O06"/>
                             <constraint firstAttribute="centerY" secondItem="Zx0-iA-Uzf" secondAttribute="centerY" id="FMW-Aq-J0G"/>
@@ -66,6 +66,7 @@
                     <constraint firstItem="P7j-T9-Sjr" firstAttribute="leading" secondItem="Wby-bv-Wva" secondAttribute="trailing" constant="-5" id="zqv-MQ-SEm"/>
                 </constraints>
             </tableViewCellContentView>
+            <color key="backgroundColor" red="0.41176470590000003" green="0.76862745099999996" blue="0.65490196079999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <connections>
                 <outlet property="itemImageView" destination="Wby-bv-Wva" id="vhk-53-8JA"/>
                 <outlet property="itemNameLabel" destination="iZs-SP-7Xl" id="NI7-r1-mzW"/>
