--- a/MLH-Braintree/ModalView2.xib
+++ b/MLH-Braintree/ModalView2.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7531" systemVersion="14C1514" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7531" systemVersion="14D131" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7520"/>
     </dependencies>
@@ -15,7 +15,7 @@
                     <subviews>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uCC-j1-lH5">
                             <rect key="frame" x="0.0" y="240" width="280" height="60"/>
-                            <color key="backgroundColor" red="0.087303549146537499" green="0.42031901915514303" blue="0.50699666703802726" alpha="1" colorSpace="calibratedRGB"/>
+                            <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="60" id="WnI-ig-dUA"/>
                             </constraints>
@@ -55,7 +55,7 @@
                             <nil key="highlightedColor"/>
                         </label>
                     </subviews>
-                    <color key="backgroundColor" red="0.25592072147149336" green="0.58223732924185945" blue="0.72549019607843135" alpha="1" colorSpace="calibratedRGB"/>
+                    <color key="backgroundColor" red="0.11164378156565657" green="0.10869665034279856" blue="0.10630963976698882" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
                         <constraint firstItem="gnB-dK-HPG" firstAttribute="leading" secondItem="EDf-bK-x6Y" secondAttribute="leading" constant="25" id="34Q-1E-RhA"/>
                         <constraint firstAttribute="centerX" secondItem="aun-pk-rB7" secondAttribute="centerX" constant="-3" id="8Cl-MR-1s9"/>
